added user creation endpoints
